mini/src/main/java/com/example/mini/global/exception/error/AuthErrorCode.java
package com.example.mini.global.exception.error;public class AuthErrorCode {
}
